# actix-microservice

./: Cargo.toml  Dockerfile  README.md  cargotarget.sh  cross-compilation.sh
.github/workflows/: ci.yaml
src/: api.rs  config.rs  logging.rs  main.rs  observability.rs
src/api/: helloworld.rs
